# tome

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE-BINARY-SIZE.md  RELEASE-READINESS.md  SECURITY.md  TELEMETRY.md  THIRD-PARTY-LICENSES  _typos.toml  about.hbs  about.toml  build.rs  constitution-review-report.md  deny.toml  dist-workspace.toml  lefthook.yml  release-plz.toml  renovate.json
.claude/agent-foundry/: supply-chain-defence.local.json
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  doc-drift.yml  model-registry-refresh.yml  release-plz.yml  release.yml  security.yml  site-ci.yml  site-supply-chain.yml
.midnight-expert/: settings.local.json
.sdd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  SECURITY.md  STACK.md  STRUCTURE.md  TESTING.md
PRDs/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
assets/harness-plugins/: README.md
assets/model-registry/: registry.json
retro/: P2.md  P3.md  P4.md  P5.md  P6.md
review/: code-review.md  contract-audit.md  disposition.md  findings.md  security-audit.md  test-audit.md
site/: .gitignore  .npmrc  DEPLOY.md  docusaurus.config.ts  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts
site/e2e/: smoke.spec.ts
site/plans/: 2026-06-01-tome-site.md  2026-06-10-site-overhaul.md
site/scripts/: check-doc-drift.mjs  enforce-pnpm.mjs  generate-cli-surface.mjs
site/specs/: 2026-06-01-tome-site-design.md  2026-06-10-site-overhaul-design.md
specs/001-phase-1-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-2-plugins-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase-3-mcp-workspaces/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase-4-refactor-harnesses/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-phase-5-commands-prompts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-phase-6-hooks-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-phase-7-beta-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  model_registry.rs  output.rs  paths.rs
src/authoring/: convert.rs  detect.rs  emit.rs  ir.rs  meta.rs  mod.rs  rewrite.rs  scaffold.rs  untrusted.rs
src/catalog/: git.rs  manifest.rs  mod.rs  store.rs
src/commands/: catalog.rs  completions.rs  config.rs  convert.rs  create.rs  doctor.rs  exit_codes.rs  init.rs  lint.rs  mcp.rs  meta.rs  mod.rs  query.rs  reindex.rs  status.rs  sync.rs  telemetry.rs
src/doctor/: binding.rs  checks.rs  cutover.rs  fixes.rs  harness_detect.rs  harness_integration.rs  mcp_probe.rs  meta_drift.rs  mod.rs  orphan_cleanup.rs  report.rs  telemetry.rs
src/embedding/: download.rs  fastembed.rs  mod.rs  profile.rs  registry.rs  remote.rs  runtime.rs  stub.rs
src/harness/: agents.rs  antigravity.rs  claude_code.rs  cline.rs  codex.rs  copilot.rs  copilot_cli.rs  crush.rs  cursor.rs  devin.rs  gemini.rs  generic.rs  generic_op.rs  goose.rs  guardrails.rs  hooks.rs  hooks_ir.rs  jetbrains_ai.rs  junie.rs  kiro.rs  launcher.rs  mcp_config.rs  mod.rs  open_plugins.rs  opencode.rs  pi.rs  plugin_assets.rs  preview.rs  routing.rs  rules_file.rs  stub.rs  sync.rs  zed.rs
src/index/: db.rs  integrity.rs  lock.rs  meta.rs  migrations.rs  mod.rs  query.rs  schema.rs  skills.rs  vec_ext.rs  workspace_catalogs.rs  workspaces.rs
src/mcp/: live_sync.rs  log.rs  mod.rs  preflight.rs  prompt_collision.rs  prompt_name.rs  prompts.rs  runtime.rs  server.rs  state.rs  substitution_helpers.rs  tool_description.rs
src/plugin/: components.rs  frontmatter.rs  identity.rs  lifecycle.rs  manifest.rs  mod.rs  selector.rs
src/presentation/: colour.rs  format.rs  mod.rs  progress.rs  prompt.rs  tables.rs
src/provider/: anthropic.rs  config.rs  error.rs  gemini.rs  http.rs  mod.rs  notice.rs  openai.rs  voyage.rs
src/settings/: composition.rs  edit.rs  mod.rs  parser.rs  resolver.rs  scopes.rs
src/substitution/: arguments.rs  builtins.rs  context.rs  data_dir.rs  env.rs  mod.rs  regex_sets.rs
src/summarise/: download.rs  llama.rs  mod.rs  prompts.rs  registry.rs  remote.rs  stub.rs  trigger.rs
src/telemetry/: allowlist.rs  buckets.rs  clock.rs  config.rs  event.rs  flush.rs  heartbeat.rs  identity.rs  install_method.rs  lock.rs  mod.rs  notice.rs  queue.rs  resolver.rs  spawn.rs  transport.rs
src/util/: atomic_dir.rs  env.rs  io.rs  mod.rs  str.rs  symlink_safe.rs  time.rs
src/workspace/: binding.rs  info.rs  init.rs  inventory.rs  mod.rs  name.rs  regen_summary.rs  remove.rs  rename.rs  resolution.rs  scope.rs  sync.rs
tests/: agent_naming_clash.rs  agent_path_traversal.rs  agent_privilege.rs  agent_removal.rs  agent_translate_claude_code.rs  agent_translate_codex.rs  agent_translate_cursor.rs  agent_translate_opencode.rs  atomic_dir.rs  atomicity.rs  atomicity_enable.rs  authoring.rs  bounded_reads.rs  catalog_add.rs  catalog_cache_refcount.rs  catalog_list.rs  catalog_plugin.rs  catalog_remove.rs  catalog_remove_cascade.rs  catalog_remove_toctou.rs  catalog_show.rs  catalog_ssh_roundtrip.rs  catalog_update.rs  catalog_update_cross_workspace_reindex.rs  catalog_update_reindex.rs  catalog_workspace_refcount.rs  completions_cli.rs  concurrency.rs  config_cli.rs  doctor.rs  doctor_detected_uninstalled.rs  doctor_fix_p4.rs  doctor_json.rs  doctor_orphan_tmp_cleanup.rs  doctor_outside_project.rs  doctor_p4.rs  doctor_p5.rs  doctor_p6.rs  doctor_p6_json_shape.rs  doctor_read_only_by_default.rs  (+164 more)
tests/authoring/: convert.rs  create.rs  cutover.rs  detect.rs  lint.rs
tests/catalog_plugin/: catalog_add.rs  (+25 more)
(+540 files in other folders)
