[package]
name = "tome"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Cross-harness plugin catalog manager for AI coding assistants."
repository = "https://github.com/devrelaicom/tome"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["claude-code", "plugins", "ai", "cli"]

[dependencies]
# Phase 1 — unchanged
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
ctrlc = "3"
regex = "1"
semver = "1"
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing"] }

# Phase 2 — embedded database + vector search (statically linked; no system deps)
rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 2 — third-party plugin frontmatter (lenient YAML; FR-013a)
serde_yaml = "0.9"

# Phase 2 — inference. Default features pull a pre-built ONNX Runtime at build
# time (CPU EP). If that becomes brittle, switch to default-features = false +
# ["ort-load-dynamic"] and have developers `brew install onnxruntime`.
fastembed = "4"

# Phase 2 — model downloads (HTTPS only via rustls; no system OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Phase 2 — presentation primitives
indicatif = "0.17"
comfy-table = "7"
owo-colors = "4"
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }

# Phase 3 — MCP server. Scoped strictly to `src/mcp/`; the rest of the binary
# stays synchronous (constitution principle: sync-only outside the MCP module).
# A structural test (`tests/sync_boundary.rs`) enforces the boundary.
rmcp = { version = "1", features = ["transport-io", "schemars"] }

# JSON Schema for MCP tool I/O. rmcp's `schemars` feature re-exports the
# same crate; our `tools/*.rs` modules use the macro derives directly.
schemars = "1"

# Phase 3 — async runtime backing the MCP server. Single-threaded `rt` only —
# the server serves one client at a time and tool calls block on synchronous
# embedder/reranker inference; `rt-multi-thread` would add ~500 KB binary
# weight for no concurrency win. See research §R-2.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "io-std", "sync", "signal", "time"] }

# Phase 4 — summariser inference. Sync API throughout; one process-wide
# `LlamaBackend` instance held in a `std::sync::OnceLock`. Statically links
# `llama.cpp` as a C++ static lib (CPU-only — no CUDA/Metal features enabled).
# Pre-1.0; minor-pinned per research §R-2.
llama-cpp-2 = "0.1"

# Phase 4 — comment/order-preserving TOML editor. Scoped to harness MCP
# config read-modify-write paths only; Tome-owned TOML continues to use the
# `toml` crate via `serde`. Minor-pinned per research §R-5.
toml_edit = "0.25"

[build-dependencies]
# Compile vendored sqlite-vec amalgamation against rusqlite's bundled SQLite.
cc = "1"

[dev-dependencies]
# Drive the interactive `tome plugin` browse flow through a real pty.
# Unix-only by design; our CI matrix is macOS + Ubuntu so this is fine.
# Not compiled into the release binary — no impact on the 50 MB size cap.
rexpect = "0.7"

[profile.release]
# Phase 1 baseline + Phase 2 binary-size tuning (NFR-001).
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
