[package]
# Phase 7 / FR-017: the crate is *published* as `tome-mcp` (the bare `tome`
# name is taken on crates.io), but the installed command and the internal lib
# crate both stay `tome`. The `[lib]` + `[[bin]]` sections below pin those two
# names so the package rename touches zero use-sites: ~180 `use tome::...`
# references across src/ + tests/ keep resolving (lib name = "tome"), and the
# built/installed binary stays `target/release/tome` (bin name = "tome").
name = "tome-mcp"
version = "0.7.16"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Cross-harness plugin catalog manager for AI coding assistants."
repository = "https://github.com/devrelaicom/tome"
readme = "README.md"
authors = ["Aaron Bassett <aaronbassett@gmail.com>"]
# Live project site (Netlify). The planned custom domain is not live yet, so the
# homepage points at the deployed site URL — a URL that resolves today (FR-025).
homepage = "https://tome-mcp.netlify.app/"
# docs.rs builds in a network-isolated sandbox, so `ort`'s default
# `download-binaries` feature (pulled transitively by `fastembed`) cannot fetch
# ONNX Runtime at build time and the docs build fails (research §R-16, PKG-2).
# A config-only fix is not available: docs.rs's [package.metadata.docs.rs] table
# exposes no env/rustc-env key to set ORT_STRATEGY/ORT_LIB_LOCATION, and the
# offending feature is a *transitive* default we cannot disable from this
# manifest without making the embedder an optional feature (invasive, out of
# scope). So `documentation` points at the repository — the §R-16 acceptable
# floor ("the field resolves"). The metadata block below is retained as a
# best-effort should docs.rs's ONNX handling ever change.
documentation = "https://github.com/devrelaicom/tome"
categories = ["command-line-utilities", "development-tools"]
keywords = ["claude-code", "mcp", "plugins", "ai", "cli"]

# Crate-tarball allowlist (FR-024 / research §R-18) — REL5 final form.
#
# An `include` allowlist (NOT an `exclude` blocklist) is the robust shape: only
# the listed paths ship, so the process/working-tree artifacts — `specs/`,
# `.sdd/`, `review/`, `retro/`, `CLAUDE.md`, the two `*.local.json` dev-state
# files, `tests/`, `.github/`, `dist-workspace.toml`, `about.{toml,hbs}` — are
# excluded by omission and cannot silently leak into the published tarball even
# as new top-level files appear. Paired with the `git rm --cached` untracking
# in this same slice (the internal artifacts are now also gitignored).
#
# INVARIANT: this list MUST include `vendor/**` and `build.rs`, so the crate
# still builds standalone from the tarball alone — `vendor/sqlite-vec` (the
# `.c`/`.h` amalgamation + its LICENSE) is compiled by `build.rs` against
# rusqlite's bundled SQLite. Verified via `cargo package --list` +
# `cargo publish --dry-run --locked`. `SECURITY.md` ships (FR-022 disclosure
# channel); `THIRD-PARTY-LICENSES` ships (the aggregated dependency-licence
# notice — the binary-redistribution notice carried over from the prior
# scaffold). `CONSTITUTION.md` is the tracked governance doc but is internal to
# the repo, not a crate-essential, so it is intentionally NOT shipped.
# NOTE: include/exclude use gitignore-style globs — an unanchored `SECURITY.md`
# matches `**/SECURITY.md` (it would pull in `.sdd/codebase/SECURITY.md` and
# `.githooks/README.md`). The single-file entries are therefore root-anchored
# with a leading `/`; `src/`, `build.rs`, and `vendor/` are anchored by shape.
include = [
    "/src/**",
    "/build.rs",
    "/vendor/**",
    "/assets/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/THIRD-PARTY-LICENSES",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

# Best-effort docs.rs configuration. See the `documentation` note above: the
# docs.rs build is expected to fail today because of `ort`'s build-time ONNX
# Runtime download, which no config-only lever here can suppress. Kept so the
# build is well-formed (single host target, full API surface) if that changes.
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# Keep the library crate name `tome` despite the `tome-mcp` package rename, so
# every `use tome::...` site stays valid with no edits (FR-017).
[lib]
name = "tome"

# Keep the installed command `tome` (target/release/tome). The CI binary-size
# gate and `env!("CARGO_BIN_EXE_tome")` test invocations key off this name.
[[bin]]
name = "tome"
path = "src/main.rs"

# CI-only: a scheduled workflow refreshes the vendored model registry. Gated
# behind `registry-refresh` so a default `cargo build` / cargo-dist release
# build NEVER compiles this bin — it is not shipped in release artifacts.
# Deliberate deviation from the plan's `release.yml` step: a tag-triggered
# workflow cannot cleanly commit/push (detached tag checkout), so this lives
# in its own `model-registry-refresh.yml` (schedule + workflow_dispatch).
[features]
registry-refresh = []

[[bin]]
name = "refresh_model_registry"
path = "src/bin/refresh_model_registry.rs"
required-features = ["registry-refresh"]

[dependencies]
# Phase 1 — unchanged
clap = { version = "4", features = ["derive"] }
# Shell-completion script generation (`tome completions <shell>`, issue #322).
# Version-matched to clap 4; its only significant dependency is `clap` itself,
# already present. Apache-2.0/MIT — on the licence allowlist.
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
ctrlc = "3"
regex = "1"
semver = "1"
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing"] }

# Phase 2 — embedded database + vector search (statically linked; no system deps)
rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 2 — third-party plugin frontmatter (lenient YAML; FR-013a)
serde_yaml = "0.9"

# Phase 2 — inference. Default features pull a pre-built ONNX Runtime at build
# time (CPU EP). If that becomes brittle, switch to default-features = false +
# ["ort-load-dynamic"] and have developers `brew install onnxruntime`.
fastembed = "4"

# Phase 2 — model downloads (HTTPS only via rustls; no system OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Phase 2 — presentation primitives
indicatif = "0.17"
comfy-table = "7"
owo-colors = "4"
inquire = { version = "0.7", default-features = false, features = ["crossterm"] }

# Phase 3 — MCP server. Scoped strictly to `src/mcp/`; the rest of the binary
# stays synchronous (constitution principle: sync-only outside the MCP module).
# A structural test (`tests/sync_boundary.rs`) enforces the boundary.
rmcp = { version = "1", features = ["transport-io", "schemars"] }

# JSON Schema for MCP tool I/O. rmcp's `schemars` feature re-exports the
# same crate; our `tools/*.rs` modules use the macro derives directly.
schemars = "1"

# Phase 3 — async runtime backing the MCP server. Single-threaded `rt` only —
# the server serves one client at a time and tool calls block on synchronous
# embedder/reranker inference; `rt-multi-thread` would add ~500 KB binary
# weight for no concurrency win. See research §R-2.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "io-std", "sync", "signal", "time"] }

# Phase 4 — summariser inference. Sync API throughout; one process-wide
# `LlamaBackend` instance held in a `std::sync::OnceLock`. Statically links
# `llama.cpp` as a C++ static lib (CPU-only — no CUDA/Metal features enabled).
# Pre-1.0; pinned at exact patch per research §R-2 + T321 fold-in:
# `llama.cpp` itself ships breaking C ABI changes on every minor version,
# and `llama-cpp-2`'s patch releases track upstream verbatim. An exact-pin
# (`=0.1.146`) avoids surprise updates that would silently change tokenizer
# behaviour or sampler defaults; bumps are intentional + reviewed.
llama-cpp-2 = "=0.1.146"

# Promoted from transitive (via reqwest, llama-cpp-2) to a direct dep:
# `LlamaModel::token_to_piece` requires an `&mut encoding_rs::Decoder`
# argument, and the type is not re-exported by `llama-cpp-2`. Using the
# same version the rest of the dep tree already pulls in keeps the crate
# graph minimal.
encoding_rs = "0.8"

# Phase 4 — comment/order-preserving TOML editor. Scoped to harness MCP
# config read-modify-write paths only; Tome-owned TOML continues to use the
# `toml` crate via `serde`. Minor-pinned per research §R-5.
toml_edit = "0.25"

# Phase 7 — promoted from transitive (via tempfile's `default`/`fs` feature and
# crossterm←comfy-table) to a direct dep under the constitution §Complexity-budget
# "make-it-explicit" rule (precedent: filetime, encoding_rs). `cargo tree -i rustix`
# resolves a single `1.1.4` and `tempfile` already enables `rustix/fs`, so this
# adds ZERO new packages (NFR-004) and stays on the licence allowlist.
# Provides `openat`/`openat2` for the FR-007 symlink-safe write primitive: the
# intermediate-component walk that the deferred final-node-only `O_NOFOLLOW`
# half-measure could never offer (research §R-1). `version = "1"` matches the
# locked 1.1.4; `fs` is the feature the primitive needs (already enabled).
# Phase 10 adds the `process` feature for `rustix::process::setsid`, used to
# detach the best-effort telemetry flusher (FR-047a) — still a feature-add on
# an already-direct dep (1.1.4), so it adds NO new Cargo.lock package.
rustix = { version = "1", features = ["fs", "process"] }

# Phase 10 — promoted from transitive (0.3.4 already locked, pulled by tempfile
# and the ring/rustls stack) to a direct dep under the constitution
# §Complexity-budget "make-it-explicit" rule (precedent: filetime, encoding_rs,
# rustix). Source of the v4 install-UUID randomness; `cargo tree -i getrandom`
# resolves a single 0.3.4 so this adds ZERO new Cargo.lock package (NFR-004).
# A `getrandom`-based hand-rolled v4 UUID (16 bytes, RFC-4122 variant/version
# bits set) keeps us off the `uuid` crate entirely (NFR-002).
getrandom = "0.3"

# Phase 8 — template rendering for `tome {catalog,plugin,skill} create --template`.
# The lightest maintained engine: `serde` (already in tree) plus exactly ONE new
# transitive crate, `memo-map` v0.3.3 (a non-optional core dep of minijinja, by
# the same author; Apache-2.0, on the licence allowlist — cargo-deny stays green,
# no config change). The plan's "serde-only / zero new packages" estimate was
# off by this one tiny crate (correction logged in retro/P2 + this comment);
# NFR-007's binding constraint is the licence gate, which passes. Slimmed with
# `default-features = false` + `builtins` (the standard filter set) — drops
# `macros`/`multi_template`/`debug`/`deserialization` we don't use, keeping the
# binary lean (NFR-008). The `serde` feature is enabled (NOT `deserialization`)
# so the `context!` macro can serialise our Rust scaffold values into template
# `Value`s — serde is already a top-level dep, so this adds NO new crate and
# `cargo-deny` stays green. minijinja's `{{ }}` delimiters do not collide with
# Tome's runtime `${TOME_*}`/`$ARGUMENTS` tokens, so scaffold-time and run-time
# substitution coexist. `cargo-generate` was rejected: it vendors libgit2 via
# `git2` (principle XII violation) and pulls ~40 transitive crates against the
# binary cap (research §R-2).
minijinja = { version = "2.20", default-features = false, features = [
    "builtins",
    "serde",
] }

# Telemetry kernel (gauge-telemetry migration) — privacy-first; owned crate.
# Brings gauge-events, sysinfo, uuid, and Windows shims transitively — the one
# deliberate new-dependency reversal of the Phase-10 "no new lockfile package"
# rule (see CONSTITUTION §Complexity-budget). Exact-pinned like the other heavy deps.
gauge-telemetry = "=0.3.1"

[build-dependencies]
# Compile vendored sqlite-vec amalgamation against rusqlite's bundled SQLite.
cc = "1"
# Phase 9 — content-hash the embedded meta-skill assets at build time. Both are
# already regular dependencies (see `[dependencies]`), so reusing them under
# `[build-dependencies]` adds NO new package to Cargo.lock — `cargo deny check`
# evaluates the same graph, and the "no new top-level dependency" invariant holds.
sha2 = "0.10"
hex = "0.4"
# Phase 13 (Task 2) — build-time validation of the vendored model-registry
# snapshot. Already a normal dependency; reusing it under `[build-dependencies]`
# adds NO new Cargo.lock package (same pattern as sha2/hex above).
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
# Drive the interactive `tome plugin` browse flow through a real pty.
# Unix-only by design; our CI matrix is macOS + Ubuntu so this is fine.
# Not compiled into the release binary — no impact on the 50 MB size cap.
rexpect = "0.7"
# Backdate mtimes in atomic-rename / orphan-cleanup tests. `filetime`
# is already in the dep graph as a transitive of `tempfile`; the
# explicit dev-dep lets US5.b's `doctor_orphan_tmp_cleanup.rs` use it
# without depending on libc directly.
filetime = "0.2"

[profile.release]
# Phase 1 baseline + Phase 2 binary-size tuning (NFR-001).
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3

# Phase 7 / FR-018: the profile `cargo-dist` builds the prebuilt release
# binaries with. Inherits the size-tuned `release` profile above
# (strip=symbols, panic=abort, codegen-units=1, opt-level=3) so the
# distributed binaries stay under the 50 MB cap (FR-020 / NFR-001); `lto` is
# restated because cargo-dist manages this table.
[profile.dist]
inherits = "release"
lto = "thin"
